tests/lean/ex2.lean.expected.out
  Set option: pp::colors
⊤
  Set option: lean::pp::notation
and true false
  Assumed: a
Error (line: 8, pos: 0) invalid object declaration, environment already has an object named 'a'
  Assumed: b
and a b
  Assumed: A
Error (line: 12, pos: 11) type mismatch at application argument 2 of
    and a A
expected type
    Bool
given type
    Type
Variable A : Type
⟨lean::pp::notation ↦ false, pp::colors ↦ false⟩
Error (line: 15, pos: 4) unknown option 'lean::p::notation', type 'Help Options.' for list of available options
Error (line: 16, pos: 23) invalid option value, given option is not an integer
  Set option: lean::pp::notation
a ∧ b
