tests/lean/ex2.lean
(* comment *)
(* (* nested comment *) *)
Set pp::colors false
Show true
Set lean::pp::notation false
Show true && false
Variable a : Bool
Variable a : Bool
Variable b : Bool
Show a && b
Variable A : Type
Check a && A
Show Environment 1
Show Options
Set lean::p::notation true
Set lean::pp::notation 10
Set lean::pp::notation true
Show a && b
